src/style/_elements.headings.less
h2, h3, h4, h5, h6 {

  display: flex;

  line-height: 1.1;

  hyphens: none;
  text-align: left;

  &::before {
    white-space: pre;
  }
}

h2, h3 {
  font-family: var(--display-font);
  font-variant-caps: small-caps;
  font-weight: var(--font-weight-normal);

  letter-spacing: 0.05em;
}

h2 {
  font-size: var(--font-size-xl);

  margin-top: var(--content-spacing-l);
}

h3 {
  font-size: var(--font-size-l);
  margin-top: calc(var(--content-spacing) * 4);

}

h4 {
  font-size: var(--font-size-s);
  font-weight: var(--font-weight-x-bold);

  margin-top: calc(var(--content-spacing) * 2);
}

/*
 * Adjacent headers
 */

h2 + h3 {
  margin-top: var(--content-spacing);
}

h3 + h4 {
  margin-top: var(--content-spacing);
}

/*
 * Counters
 */

body {
  counter-reset: h2i;
}

h2,h3,h4 {
  position: relative;

  &::before {
    position: absolute;
    transform: translateX(-100%);
    letter-spacing: unset;
  }
}

h2 {
  counter-reset: h3i;

  &::before {
    content: counter(h2i) ". ";
    counter-increment: h2i;
  }
}

h3 {
  &::before {
    content: counter(h2i) "." counter(h3i) ". ";
    counter-increment: h3i;
  }

}

